
name:           breakout
version:        0.1.0.0
description:    Gloss breakout
homepage:       https://github.com/AndreCascais/breakout
bug-reports:    https://github.com/AndreCascais/breakout/issues
author:         André Cascais
maintainer:     example@example.com
copyright:      2018 André Cascais
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable breakout
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      gloss,
      random
  default-language: Haskell2010


